k8s_with_ingress/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-web-service
spec:
  ports:
    - port: 80
  selector:
    component: react-project-web
